Corrected overflow hide

--- a/src/Components/Brand Heading/brandheading.css
+++ b/src/Components/Brand Heading/brandheading.css
@@ -1,6 +1,3 @@
-* {
-    overflow-y: hidden;
-}
 #brand-heading-div {
     display: flex;
     justify-content: center;
@@ -17,6 +14,7 @@
     top: 6rem;
     left: -3.5rem;
     padding-left: 1rem;
+    overflow-y: hidden;
 }
 
 .name {
@@ -31,6 +29,7 @@
 #nisha {
     position: relative;
     left: -1rem;
+    overflow-y: hidden;
 }
 
 @media screen and (max-width: 830px) {
